kubernetes/hotel-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hotel-service
  template:
    metadata:
      labels:
        app: hotel-service
    spec:
      containers:
      - name: hotel-service
        image: hotel-service:latest
        ports:
        - containerPort: 8084
