kubernetes/booking-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
