kubernetes/hotel-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
spec:
  selector:
    app: hotel-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8084
