kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkinly-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-url: "http://user-service/api/user/authenticate"
    nginx.ingress.kubernetes.io/auth-signin: "http://user-service/login"
spec:
  rules:
  - host: checkinly.local
    http:
      paths:
      - path: /api/user/authenticate
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/booking
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
      - path: /api/payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
